# Bacformer_GG2_prior

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
bacformer_prior/: __init__.py
scripts/: 0.audit_coverage.py  0b.blindspot_audit.py  1.build_mapping.py  2.download_faa.py  2b.prodigal.py  3.embed.py  4.pack_tensor.py  README.md  _build_quality_cache.py  _run_with_glibc.sh
